Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github.com/evesweet/exercicios-ds2/proj1-escrevendo-um-artigo</title>
+    <title>https://github.com/Anderson6919/Projeto-do-c-o1/blob/d75cfe76da42971368634ddf4528be42bb1cd71b/index.html</title>
   </head>
   <body>
     <h1>Júpiter: O Gigante Gasoso do Sistema Solar</h1>
@@ -34,4 +34,5 @@
     <h2>Conclusão<br></h2>
     <p>Júpiter é verdadeiramente um colosso celestial que continua a intrigar os cientistas e entusiastas do espaço. Sua massa, tamanho e complexidade atmosférica o tornam um laboratório natural para entender a formação e a evolução de planetas gasosos. Além disso, suas luas e tempestades proporcionam uma visão fascinante da dinâmica planetária e do potencial de mundos alienígenas. À medida que a exploração espacial continua avançando, é provável que Júpiter ainda reserve muitas surpresas e segredos a serem revelados.</p>
   </body>
+
 </html>
